made updates to webpage layout

--- a/index.html
+++ b/index.html
@@ -4,9 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./index.css">
+    <script src="app.js"></script>
     <title>Snow Club at Sac State</title>
+    <link rel="shortcut icon" type="image/png"" href="./resources/mtn.png">
 </head>
 <body>
-    work in progress...
+    <img src="./resources/fin.png" alt="" class="logo">
+    
+    <br>
+    <div class="socials"> 
+        <a href="https://discord.gg/gxZVca9uZU" target="_blank">
+            <img src="./resources/whiteDisc.png" alt="" class="discord">
+        </a>
+        <a href="https://www.tiktok.com/@sacsnowclub" target="_blank">
+            <img src="./resources/whiteTikTok.png" alt="" class="tiktok">
+        </a>
+        <a href="https://www.instagram.com/sacsnowclub/" target="_blank">
+            <img src="./resources/whiteIG.png" alt="" class="instagram">
+        </a>
+    </div>
+
+    <div class="links">
+        <a href="https://discord.gg/gxZVca9uZU" target="_blank" class="linkBox">
+            <br>
+            JOIN OUR DISCORD
+        </a>
+        <a href="https://facebook.us15.list-manage.com/subscribe?u=63cf1cc6814ebaf9cda955576&id=f83b629815" target="_blank" class="linkBox">
+            <br>
+            SUBSCRIBE TO OUR EMAILS
+        </a>
+        <a href="https://csus.presence.io/form/2022-2023-recreation-club-membership-application" target="_blank" class="linkBox">
+            <br>
+            Become an Official Member of the club! (CSUS Students)
+        </a>
+        <a href="https://forms.gle/2V6MTsz2aS6AaCqw5" target="_blank" class="linkBox">
+            <br>
+            23/24 Ikon Pass Discount Application!
+        </a>
+        <a href="https://us15.campaign-archive.com/home/?u=63cf1cc6814ebaf9cda955576&id=f83b629815" target="_blank" class="linkBox">
+            <br>
+            Read previous Emails
+        </a>
+        <a href="https://csus.presence.io/form/2022-2023-recreation-club-community-member-application" target="_blank" class="linkBox">
+            <br>
+            Become a Community Member (non-CSUS Students)
+        </a>
+    </div>
+    
+    <br>
+    <!-- work in progress... -->
 </body>
 </html>
