--- a/old site/index.html
+++ b/old site/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./index.css">
     <script src="app.js"></script>
     <title>Snow Club at Sac State</title>
-    <link rel="shortcut icon" type="image/png"" href="./resources/mtn.png">
+    <link rel="shortcut icon" type="image/png" href="./resources/mtn.png">
 </head>
 <body>
     <img src="./resources/fin.png" alt="" class="logo">
