--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
     </div>
 
     <div class="links">
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfBRGygz-LsupXhr74oQc0U4uLPqTQLlir2oEV2x2h7RBjOBQ/viewform?usp=sf_link" target="_blank" class="linkBox">
+            <br>
+            The first meeting is Sept/ 14th @ 7:30 pm Orchid Suite in Union
+        </a>
+         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfBRGygz-LsupXhr74oQc0U4uLPqTQLlir2oEV2x2h7RBjOBQ/viewform?usp=sf_link" target="_blank" class="linkBox">
+            <br>
+            Fill out this survey and get a freebie!
+        </a>
         <a href="https://discord.gg/gxZVca9uZU" target="_blank" class="linkBox">
             <br>
             JOIN OUR DISCORD
