--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="links">
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfBRGygz-LsupXhr74oQc0U4uLPqTQLlir2oEV2x2h7RBjOBQ/viewform?usp=sf_link" target="_blank" class="linkBox">
+        <a href="https://forms.gle/uq8x3RMBsM1VzHYu8" target="_blank" class="linkBox">
             <br>
             Fill out this survey and get a freebie!
         </a>
