--- a/index.html
+++ b/index.html
@@ -26,13 +26,26 @@
     </div>
 
     <div class="links">
-        <a href="https://forms.gle/uq8x3RMBsM1VzHYu8" target="_blank" class="linkBox">
+<!--         <a href="https://forms.gle/uq8x3RMBsM1VzHYu8" target="_blank" class="linkBox">
             <br>
             Fill out this survey and get a freebie!
-        </a>
+        </a> -->
+<!--         <a href="https://csus.presence.io/form/2022-2023-recreation-club-membership-application" target="_blank" class="linkBox">
+            <br>
+            Become an Official Member of the club! (CSUS Students)
+        </a> -->
+<!--         <a href="https://csus.presence.io/form/2022-2023-recreation-club-community-member-application" target="_blank" class="linkBox">
+            <br>
+            Become a Community Member (non-CSUS Students)
+        </a> -->
+       
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfBRGygz-LsupXhr74oQc0U4uLPqTQLlir2oEV2x2h7RBjOBQ/viewform?usp=sf_link" target="_blank" class="linkBox">
             <br>
-            The first meeting is Sept/ 14th @ 7:30 pm Orchid Suite in Union
+            The first meeting is Sept. 14th @ 7:30 pm Orchid Suite in Union
+        </a>
+        <a href=" https://sacstateskiswap.weebly.com/" target="_blank" class="linkBox">
+            <br>
+            56th annual SKI SWAP!!!
         </a>
         <a href="https://discord.gg/gxZVca9uZU" target="_blank" class="linkBox">
             <br>
@@ -42,10 +55,7 @@
             <br>
             SUBSCRIBE TO OUR EMAILS
         </a>
-        <a href="https://csus.presence.io/form/2022-2023-recreation-club-membership-application" target="_blank" class="linkBox">
-            <br>
-            Become an Official Member of the club! (CSUS Students)
-        </a>
+
         <a href="https://forms.gle/2V6MTsz2aS6AaCqw5" target="_blank" class="linkBox">
             <br>
             23/24 Ikon Pass Discount Application!
@@ -54,10 +64,7 @@
             <br>
             Read previous Emails
         </a>
-        <a href="https://csus.presence.io/form/2022-2023-recreation-club-community-member-application" target="_blank" class="linkBox">
-            <br>
-            Become a Community Member (non-CSUS Students)
-        </a>
+
     </div>
     
     <br>
