--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
        
         <a href="" target="_blank" class="linkBox">
             <br>
-            The first meeting is Sept. 14th @ 7:30 pm at Orchard Suite in Union
+            The next meeting is Sept. 28th @ 6:30 pm. Location is TBD
         </a>
         <a href=" https://sacstateskiswap.weebly.com/" target="_blank" class="linkBox">
             <br>
@@ -71,6 +71,11 @@
             <br>
             Community Member Application
         </a>
+        <a href="https://docs.google.com/forms/d/1If0XYbERTi0OZwrvjOXSuATqWc0GtudZZtn4xry0dTg/viewform?edit_requested=true" target="_blank" class="linkBox">
+            <br>
+            SIGN UP to volunteer at the ski swap
+        </a>
+        
 
 
     </div>
