--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
        
         <a href="" target="_blank" class="linkBox">
             <br>
-            The next meeting is Sept. 28th @ 6:30 pm. Location is TBD
+            The next meeting is Oct. 12th @ 7:45 pm in the Forrest suite of the Union
         </a>
         <a href=" https://sacstateskiswap.weebly.com/" target="_blank" class="linkBox">
             <br>
