--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             SIGN UP to volunteer at the ski swap
         </a> -->
        
-        <a href="" target="_blank" class="linkBox">
+<!--         <a href="" target="_blank" class="linkBox">
             <br>
             The next meeting is Nov. 16th @ 7:45 pm in the Forrest suite of the Union
         </a>
@@ -66,7 +66,13 @@
         <a href="https://forms.gle/2V6MTsz2aS6AaCqw5" target="_blank" class="linkBox">
             <br>
             23/24 Ikon Pass Discount Application!
+        </a> -->
+        <a href="https://inntopia.travel/Ecomm/Package/Package/9801138/en-US/?packageid=75325&promocode=SSSBG24" target="_blank" class="linkBox">
+            <br>
+            Check out the new Palisades Tahoe bus program
+            (GENERAL PUBLIC)
         </a>
+        
         <a href="https://csusrec.dserec.com/online/clubsports" target="_blank" class="linkBox">
             <br>
             Student Member Application
