--- a/index.html
+++ b/index.html
@@ -67,10 +67,9 @@
             <br>
             23/24 Ikon Pass Discount Application!
         </a> -->
-        <a href="https://inntopia.travel/Ecomm/Package/Package/9801138/en-US/?packageid=75325&promocode=SSSBG24" target="_blank" class="linkBox">
+        <a href="https://book.palisadestahoe.com/Ecomm/Package/Package/9801138/en-US/?packageid=75415&promocode=SSSB24" target="_blank" class="linkBox">
             <br>
             Check out the new Palisades Tahoe bus program
-            (GENERAL PUBLIC)
         </a>
         
         <a href="https://csusrec.dserec.com/online/clubsports" target="_blank" class="linkBox">
