--- a/index.html
+++ b/index.html
@@ -67,11 +67,15 @@
             <br>
             23/24 Ikon Pass Discount Application!
         </a> -->
+        
         <a href="https://book.palisadestahoe.com/Ecomm/Package/Package/9801138/en-US/?packageid=75415&promocode=SSSB24" target="_blank" class="linkBox">
             <br>
-            Check out the new Palisades Tahoe bus program
+            Sign up for the Palisades Tahoe bus here!!!
         </a>
-        
+        <a href="https://inntopia.travel/Ecomm/Package/Package/9647939/en-US/?packageid=75427&promocode=SSPPP24" target="_blank" class="linkBox">
+            <br>
+           Palisades Perfect Progrssion program
+        </a>
         <a href="https://csusrec.dserec.com/online/clubsports" target="_blank" class="linkBox">
             <br>
             Student Member Application
