--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
             23/24 Ikon Pass Discount Application!
         </a> -->
         
-        <a href="https://book.palisadestahoe.com/Ecomm/Package/Package/9801138/en-US/?packageid=75415&promocode=SSSB24" target="_blank" class="linkBox">
+<!--         <a href="https://book.palisadestahoe.com/Ecomm/Package/Package/9801138/en-US/?packageid=75415&promocode=SSSB24" target="_blank" class="linkBox">
             <br>
             Sign up for the Palisades Tahoe bus here!!!
         </a>
         <a href="https://inntopia.travel/Ecomm/Package/Package/9647939/en-US/?packageid=75427&promocode=SSPPP24" target="_blank" class="linkBox">
             <br>
            Palisades Perfect Progrssion program
-        </a>
+        </a> -->
         <a href="https://csusrec.dserec.com/online/clubsports" target="_blank" class="linkBox">
             <br>
             Student Member Application
