--- a/index.html
+++ b/index.html
@@ -59,23 +59,23 @@
             <br>
             The next meeting is Nov. 16th @ 7:45 pm in the Forrest suite of the Union
         </a>
-        <a href="https://forms.gle/hVAU7FFCgX9RkmAVA" target="_blank" class="linkBox">
-            <br>
-            PRE-ORDER your jersey here!!!
-        </a>
+        
         <a href="https://forms.gle/2V6MTsz2aS6AaCqw5" target="_blank" class="linkBox">
             <br>
             23/24 Ikon Pass Discount Application!
         </a> -->
-        
-<!--         <a href="https://book.palisadestahoe.com/Ecomm/Package/Package/9801138/en-US/?packageid=75415&promocode=SSSB24" target="_blank" class="linkBox">
+        <a href="https://forms.gle/Cp9GWuZKUngxRsTC8" target="_blank" class="linkBox">
+            <br>
+            PRE-ORDER your T-shirt or Hoodie here!!!
+        </a>
+        <a href="https://book.palisadestahoe.com/Ecomm/Package/Package/9801138/en-US/?packageid=75415&promocode=SSSB24" target="_blank" class="linkBox">
             <br>
             Sign up for the Palisades Tahoe bus here!!!
         </a>
         <a href="https://inntopia.travel/Ecomm/Package/Package/9647939/en-US/?packageid=75427&promocode=SSPPP24" target="_blank" class="linkBox">
             <br>
            Palisades Perfect Progrssion program
-        </a> -->
+        </a>
         <a href="https://csusrec.dserec.com/online/clubsports" target="_blank" class="linkBox">
             <br>
             Student Member Application
