--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
             <br>
             Read previous Emails
         </a> -->
-<!--    <a href="https://discord.gg/gxZVca9uZU" target="_blank" class="linkBox"> 
-        <br>
-            JOIN OUR DISCORD
-        </a> -->
+<!--     -->
 <!--    <a href="https://docs.google.com/forms/d/1If0XYbERTi0OZwrvjOXSuATqWc0GtudZZtn4xry0dTg/viewform?edit_requested=true" target="_blank" class="linkBox">
         <br>
             SIGN UP to volunteer at the ski swap
@@ -60,21 +57,18 @@
             The next meeting is Nov. 16th @ 7:45 pm in the Forrest suite of the Union
         </a>
         
-        <a href="https://forms.gle/2V6MTsz2aS6AaCqw5" target="_blank" class="linkBox">
-            <br>
-            23/24 Ikon Pass Discount Application!
-        </a> -->
+         -->
         <a href="https://forms.gle/Cp9GWuZKUngxRsTC8" target="_blank" class="linkBox">
             <br>
             PRE-ORDER your T-shirt or Hoodie here!!!
         </a>
-        <a href="https://book.palisadestahoe.com/Ecomm/Package/Package/9801138/en-US/?packageid=75415&promocode=SSSB24" target="_blank" class="linkBox">
+        <a href="https://forms.gle/jubCJuoyfbegNw319" target="_blank" class="linkBox">
             <br>
-            Sign up for the Palisades Tahoe bus here!!!
+            23/24 Ikon Pass Discount Application!
         </a>
-        <a href="https://inntopia.travel/Ecomm/Package/Package/9647939/en-US/?packageid=75427&promocode=SSPPP24" target="_blank" class="linkBox">
-            <br>
-           Palisades Perfect Progrssion program
+        <a href="https://discord.gg/gxZVca9uZU" target="_blank" class="linkBox"> 
+        <br>
+            JOIN OUR DISCORD
         </a>
         <a href="https://csusrec.dserec.com/online/clubsports" target="_blank" class="linkBox">
             <br>
