--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
         </a>
         
          -->
-        <a href="https://forms.gle/Cp9GWuZKUngxRsTC8" target="_blank" class="linkBox">
+<!--         <a href="https://forms.gle/Cp9GWuZKUngxRsTC8" target="_blank" class="linkBox">
             <br>
             PRE-ORDER your T-shirt or Hoodie here!!!
-        </a>
+        </a> -->
         <a href="https://forms.gle/jubCJuoyfbegNw319" target="_blank" class="linkBox">
             <br>
             24/5 Ikon Pass Discount Application!
