--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
         <br>
             JOIN OUR DISCORD
         </a>
-        <a href="https://csusrec.dserec.com/online/clubsports" target="_blank" class="linkBox">
+<!--          <a href="https://csusrec.dserec.com/online/clubsports" target="_blank" class="linkBox">
             <br>
             Student Member Application
         </a>
         <a href="https://csus.presence.io/form/2023-2024-recreation-club-community-member-application" target="_blank" class="linkBox">
             <br>
             Community Member Application
-        </a>
+        </a>-->
         
     </div>
     
