--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
             <img src="./resources/whiteIG.png" alt="" class="instagram">
         </a>
     </div>
+    
 
     <div class="links">
+        <a href="https://sacstateskiswap.weebly.com/" target="_blank" class="linkBox">
+            <br>
+            SKI SWAP Oct.20th
+        </a>
         <a href="https://forms.gle/jubCJuoyfbegNw319" target="_blank" class="linkBox">
             <br>
             24/5 Ikon Pass Discount Application!
