--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
             <br>
             SKI SWAP Oct.20th
         </a>
+        <a href="https://forms.gle/ceez1k1LtbuWVugM7" target="_blank" class="linkBox">
+            <br>
+            Sign up to volunteer at the ski swap
+        </a>
+        
         <a href="https://forms.gle/jubCJuoyfbegNw319" target="_blank" class="linkBox">
             <br>
             24/5 Ikon Pass Discount Application!
