--- a/index.html
+++ b/index.html
@@ -27,18 +27,9 @@
     
 
     <div class="links">
-        <a href="https://sacstateskiswap.weebly.com/" target="_blank" class="linkBox">
-            <br>
-            SKI SWAP Oct.20th
-        </a>
-        <a href="https://forms.gle/ceez1k1LtbuWVugM7" target="_blank" class="linkBox">
-            <br>
-            Sign up to volunteer at the ski swap
-        </a>
-        
-        <a href="https://forms.gle/jubCJuoyfbegNw319" target="_blank" class="linkBox">
-            <br>
-            24/5 Ikon Pass Discount Application!
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdAxkJTvjLP1VjhYevVB3EtHPdTrsJT9Mj5P9RZWngDNuxwnw/viewform?usp=sf_link" target="_blank" class="linkBox"> 
+        <br>
+            Order your Jersey now!
         </a>
         <a href="https://discord.gg/gxZVca9uZU" target="_blank" class="linkBox"> 
         <br>
