--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="links">
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdAxkJTvjLP1VjhYevVB3EtHPdTrsJT9Mj5P9RZWngDNuxwnw/viewform?usp=sf_link" target="_blank" class="linkBox"> 
         <br>
-            Order your Jersey now!
+            Order Your Jersey Here!
         </a>
         <a href="https://discord.gg/gxZVca9uZU" target="_blank" class="linkBox"> 
         <br>
