--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     
 
     <div class="links">
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdAxkJTvjLP1VjhYevVB3EtHPdTrsJT9Mj5P9RZWngDNuxwnw/viewform?usp=sf_link" target="_blank" class="linkBox"> 
+        <a href="https://forms.gle/M6F2pEYsiHESL15S9" target="_blank" class="linkBox"> 
         <br>
-            Order Your Jersey Here!
+            Apply for your 25-26 IKON PASS discount here!
         </a>
         <a href="https://discord.gg/gxZVca9uZU" target="_blank" class="linkBox"> 
         <br>
@@ -41,7 +41,7 @@
         </a>
        <a href="https://csus.campusgroups.com/soal/survey?survey_uid=ee665cbb-4940-11ef-8274-0e2b5028887f" target="_blank" class="linkBox">
             <br>
-            Community Member Application
+            24-25 Community Member Application
         </a>
         
     </div>
